<resources>
    <string name="app_name">My Application</string>
    <string name="mercadium">MercadiuM</string>
    <string name="ingreseclave">ingreseClave</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los Términos y Condiciones</string>
    <string name="enviar">Enviar</string>
    <string name="usuario">Usuario</string>
    <string name="ingrese_clave">Ingrese Clave</string>
    <string name="registrate">¡Registrate!</string>
    <string name="olvid_usuario_contrase_a">Olvidè Usuario/Contraseña</string>
    <string name="invitado">Invitado</string>
</resources>