<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FFFFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mercadium"
        android:textColor="@color/material_dynamic_neutral10"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="#90EE90"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="225dp"
        android:layout_height="277dp"
        android:layout_marginStart="80dp"
        app:srcCompat="@drawable/loglogo" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/usuario" />

    <EditText
        android:id="@+id/etClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/ingrese_clave" />

    <Button
        android:id="@+id/btEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/enviar"
        android:backgroundTint="#228B22"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#0000FF"
        android:text="@string/registrate" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/olvid_usuario_contrase_a" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#0000FF"
        android:paddingTop="20dp"
        android:text="@string/invitado" />




</LinearLayout>